Fixed task reorder animation distortion

--- a/src/index.css
+++ b/src/index.css
@@ -509,13 +509,13 @@ nav {
 /* TASK CONTAINER */
 
 .taskContainer {
+    position: relative;
     cursor: pointer;
     display: grid;
     height: 60px;
     width: max(100%, 250px);
     grid-template: 30px 30px/40px auto 40px;
     border-radius: 5px;
-    /*transition: box-shadow ease-in-out 0.2s;*/
 }
 
 ul,
@@ -528,36 +528,11 @@ ul {
     width: max(90%, 250px);
 }
 
-
-/*
-.taskContainer::after {
-    z-index: -1;
-    content: '';
+li {
+    position: relative;
     width: 100%;
-    height: 100%;
-    position: absolute;
-    border-radius: 5px;
-
-    opacity: 0;
-    background-color: white;
-    transition: all 0.2s ease-in-out;
-    border: 1.5px solid rgba(255, 255, 255, 0);
-}
-*/
-/*
-.taskContainer:hover {
-    box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.17);
 }
 
-.taskContainer:hover > .deleteContainer {
-    opacity: 1;
-}
-
-/*
-.taskContainer:hover::after {
-     opacity: 1;
-}
-*/
 .taskContainer.viewing::after {
     opacity: 1;
     border: 1.5px solid var(--primary-blue);
@@ -568,15 +543,21 @@ ul {
 }
 
 .checkContainer {
-    display: flex;
     align-items: center;
-    justify-content: center;
+    align-self: center;
+    justify-self: center;
+    padding: 0;
+    margin: 0;
     transition: all ease-in-out 0.2s;
+    border-radius: 50px;
+    width: 20px;
+    height: 20px;
 }
 
 .taskContainer.completed .checkContainer {
     filter: var(--secondary-svg-color);
 }
+
 
 .checkContainer svg {
     transition: all ease-in-out 0.2s;
@@ -612,20 +593,31 @@ ul {
 }
 
 .deleteContainer {
-    /*position: absolute;*/
+    position: relative;
     display: flex;
+    opacity: 0;
     align-items: center;
     justify-content: center;
     filter: var(--secondary-svg-color);
     transition: opacity ease-in-out 0.3s;
-}/*
+}
+
+
+.taskContainer.dragging .deleteContainer{
+    opacity: 1;
+    transition: none;
+}
+
 .taskContainer.completed .deleteContainer {
     opacity: 1;
 }
-*/
+
+.taskContainer:hover .deleteContainer{
+    opacity: 1;
+}
+
 .descriptionContainer {
     pointer-events: none;
-
     grid-column-start: 2;
     width: auto;
     height: 30px;
